--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+    implementation 'com.github.eltohamy:material-hijri-calendarview:1.1.2'
+    implementation group: 'com.github.msarhan', name: 'ummalqura-calendar', version:'1.1.9'
 }
 
