--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 32
@@ -21,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 
 }
 
@@ -31,10 +35,18 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
-    implementation 'com.github.eltohamy:material-hijri-calendarview:1.1.2'
-    implementation group: 'com.github.msarhan', name: 'ummalqura-calendar', version:'1.1.9'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'com.github.vaibhav1929:android-navigation-bar:1.0'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+    implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'com.google.firebase:firebase-database'
+    implementation  'com.pddstudio:starview:1.0.0'
+    implementation 'br.com.simplepass:loading-button-android:2.2.0'
 }
 
