--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login" />
+        <activity
+            android:name=".DataFeedingMain"
+            android:exported="false" />
+        <activity
+            android:name=".AgeCalc"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
@@ -52,7 +68,7 @@
         </receiver>
         <receiver
             android:name=".ExexutableTask"
-            android:enabled="true"></receiver>
+            android:enabled="true" />
     </application>
 
 </manifest>
