--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
@@ -46,7 +47,11 @@ dependencies {
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     implementation 'com.google.firebase:firebase-database'
-    implementation  'com.pddstudio:starview:1.0.0'
     implementation 'br.com.simplepass:loading-button-android:2.2.0'
+    implementation "androidx.work:work-runtime:2.7.1"
+    implementation 'com.github.wenchaojiang:AndroidSwipeableCardStack:0.1.6'
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 }
 
