--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:name=".ApplicationClass"
@@ -13,23 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity2"
+            android:name=".MainActivity3"
             android:exported="false" />
+
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
             android:name=".DataFeedingMain"
-            android:exported="false" />
-        <activity
-            android:name=".AgeCalc"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
@@ -66,9 +59,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/materialclockinfo" />
         </receiver>
-        <receiver
-            android:name=".ExexutableTask"
-            android:enabled="true" />
     </application>
 
 </manifest>
